--- a/login.html
+++ b/login.html
@@ -1,27 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Login</title></head>
-<body><h1>Login</h1><script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-const firebaseConfig = {
-  apiKey: "AIzaSyDaZHDJh8Jw4U1-QT2TYWAOxk3Xy57Sekk",
-  authDomain: "testgithub-d13a2.firebaseapp.com",
-  databaseURL: "https://testgithub-d13a2-default-rtdb.firebaseio.com",
-  projectId: "testgithub-d13a2",
-  storageBucket: "testgithub-d13a2.appspot.com",
-  messagingSenderId: "847448063225",
-  appId: "1:847448063225:web:1f51f702060de265f6898e"
-};
-const app = initializeApp(firebaseConfig);
-const auth = getAuth();
-document.body.innerHTML += '<form id="login"><input id="email" type="email"><input id="senha" type="password"><button type="submit">Entrar</button></form>';
-document.getElementById("login").addEventListener("submit", e => {
-  e.preventDefault();
-  const email = document.getElementById("email").value;
-  const senha = document.getElementById("senha").value;
-  signInWithEmailAndPassword(auth, email, senha)
-    .then(() => location.href = "index.html")
-    .catch(e => alert("Erro: " + e.message));
-});
-</script></body></html>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Login - Barbearia Davi Dias</title>
+</head>
+<body>
+  <h1>Login</h1>
+  <form id="login">
+    <input id="email" type="email" placeholder="Seu e-mail" required><br>
+    <input id="senha" type="password" placeholder="Sua senha" required><br>
+    <button type="submit">Entrar</button>
+  </form>
+
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyDaZHDJh8Jw4U1-QT2TYWAOxk3Xy57Sekk",
+      authDomain: "testgithub-d13a2.firebaseapp.com",
+      databaseURL: "https://testgithub-d13a2-default-rtdb.firebaseio.com",
+      projectId: "testgithub-d13a2",
+      storageBucket: "testgithub-d13a2.appspot.com",
+      messagingSenderId: "847448063225",
+      appId: "1:847448063225:web:1f51f702060de265f6898e"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+
+    const loginForm = document.getElementById("login");
+    loginForm.addEventListener("submit", (e) => {
+      e.preventDefault();
+      const email = document.getElementById("email").value;
+      const senha = document.getElementById("senha").value;
+
+      signInWithEmailAndPassword(auth, email, senha)
+        .then(() => {
+          alert("Login realizado!");
+          location.href = "admin.html"; // ou index.html se preferir
+        })
+        .catch((error) => {
+          alert("Erro: " + error.message);
+        });
+    });
+  </script>
+</body>
+</html>
